tests/out/error/match/case_handled.in.bt
x := 3
match x {
	2 {}
	1 {}
	2 {}
}
